# CMAKE-TUTORIAL

./: CMakeCache.txt  CMakeLists.txt  README.md
test2/: CMakeLists.txt  Makefile  cmake_install.cmake
test2/src/: t2.c
test3/: CMakeLists.txt  Makefile  cmake_install.cmake
test3/inc/: tt2.h
test3/lib/: tt4.c
test3/src/: tt2.c  tt3.c
